    - Fix typo in kleopatra description.
    - Don't capitalize akonadiconsole short description, remove starting
      article
    - Make libmimelib4 long description smaller than 80 columns.
  * Update lintian overrides.
  * Bump S-V to 3.9.1; update Breaks/Conflicts/Replaces.

  [ Pino Toscano ]
  * Add jovie alternative to kttsd suggest.
  * Small touches at blogilo's description.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 02 Mar 2011 23:39:39 +0000

kdepim (4:4.4.7-3) unstable; urgency=high

  * Do not crash when the feed being added does not exist. (Closes: #605094)
  * Urgency=high, aimed at squeeze.

 -- Modestas Vainius <modax@debian.org>  Thu, 20 Jan 2011 00:55:09 +0200

kdepim (4:4.4.7-2) unstable; urgency=low

  * Release to unstable.

 -- Modestas Vainius <modax@debian.org>  Sat, 13 Nov 2010 00:54:38 +0200

kdepim (4:4.4.7-1) experimental; urgency=low

  * New upstream release.

 -- Modestas Vainius <modax@debian.org>  Fri, 22 Oct 2010 21:51:06 +0300

kdepim (4:4.4.6-1) unstable; urgency=low

  * New upstream bugfix release.

  [ Modestas Vainius ]
  * Point debian/control Vcs fields to the new Git repository.

  [ Pino Toscano ]
  * Fix a typo in the description of kalarm. (Closes: #591958)

 -- Modestas Vainius <modax@debian.org>  Tue, 21 Sep 2010 16:59:27 +0300

kdepim (4:4.4.5-1) unstable; urgency=low

  [ Modestas Vainius ]
  * New upstream release.
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Sune Vuorela ]
  * Make blogilo depend on libqt4-sql-sqlite (Closes: #584614)
  * Update descriptions

 -- Sune Vuorela <sune@debian.org>  Sun, 18 Jul 2010 10:19:25 +0200

kdepim (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Sune Vuorela ]
  * Don't suggest gnupg
  * Promote gnupg2 and friends to recommends.
  * Update my email.

  [ Modestas Vainius ]
  * Bump pkg-kde-tools build dependency to (>= 0.9) for HTML_INSTALL_DIR
    switch and 3.0 (quilt) source format support.