@@ -6,7 +6,7 @@ Uploaders: Sune Vuorela <sune@debian.org>, Fathi Boudra <fabo@debian.org>,
  Armin Berres <armin+debian@space-based.de>, Modestas Vainius <modax@debian.org>,
  Michael Meskes <meskes@debian.org>
 Build-Depends: kde-sc-dev-latest (>= 4:4.6.1),
- cdbs, cmake, debhelper (>= 7.3), pkg-kde-tools (>= 0.9),
+ cmake, debhelper (>= 7.3), pkg-kde-tools (>= 0.11),
  kdelibs5-dev (>= 4:4.6), kdepimlibs5-dev (>= 4:4.6), libphonon-dev (>= 4:4.6.0really4.3.80),
  libgpgme11-dev, libboost-dev (>= 1.40.0-2), libboost-graph-dev (>= 1.40.0-2), libsasl2-dev,
  xsltproc, libgnokii-dev, libxss-dev, libqca2-dev (>= 2.0.0), libassuan-dev,
