@@ -1,10 +1,14 @@
 #!/usr/bin/make -f
 
-include /usr/share/pkg-kde-tools/qt-kde-team/1/debian-qt-kde.mk
+include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
+libpkgs_gen_strict_local_shlibs = $(libpkgs_all_packages)
+include /usr/share/pkg-kde-tools/qt-kde-team/2/library-packages.mk
 
-DEBIANVERSION ?= $(shell dpkg-parsechangelog | grep '^Version: ' | sed 's/^Version: //')
+.PHONY: override_dh_auto_test
 
 # Strict local dependencies (there are no external ones anyway)
-DEB_DH_MAKESHLIBS_ARGS_ALL := -V
-DEB_STRICT_LOCAL_SHLIBS_PACKAGES = $(DEB_LIBRARY_PACKAGES)
-include /usr/share/pkg-kde-tools/qt-kde-team/1/library-packages.mk
+override_dh_makeshlibs:
+	$(overriden_command) -V
+
+override_dh_strip:
+	$(overriden_command) --dbg-package=kdepim-dbg
